--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 
-  @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lato&display=swap');
 
 *{
     margin: 0;
@@ -13,7 +13,7 @@ nav{
     background-color: #9376e0;
 }
 .nav-container{
-    max-width: 1200px;
+    max-width: 1300px;
     min-height: 10px;
     display: flex;
     margin: 0 auto;
@@ -59,4 +59,69 @@ nav{
     color: black;
     border-radius: 5px;
     font-weight: 700;
+}
+/* banner styles */
+
+.banner-container{
+    max-width: 1300px;
+    min-height: 90px;
+    margin: 30px auto;
+    background-color: #e6e9eb;
+    border-radius: 10px;
+    display: flex;
+}
+.text-content{
+    width: 50%;
+    text-align: center;
+    padding: 70px 0 20px;
+}
+.img-content{
+    width: 50%;
+}
+.img-content img{
+    width: 100%;
+    padding: 10px;
+}
+.banner-container h1{
+    font-size: 50px;
+    background-image: linear-gradient(to bottom,#9376e0,#e893cf);
+    color: transparent;
+    -webkit-background-clip: text;
+    margin-bottom: 15px;
+
+}
+.banner-container p{
+    font-family: 'Dancing Script', cursive;
+    font-size: 30px;
+    margin-bottom: 20px;
+    font-weight: 500;
+    
+}
+.btn-primary{
+    background: transparent;
+    padding: 10px 20px;
+    border:2px solid #9376e0;
+    border-radius: 5px;
+    margin-right: 20px;
+}
+.banner-icon{
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 20px;
+
+}
+.banner-icon .icon{
+    padding: 0 10px;
+}
+.fa-facebook{
+    color: blue;
+}
+.fa-twitter{
+    color: skyblue;
+}
+.fa-youtube{
+    color: red;
+}
+.fa-instagram{
+    color: purple;
 }
