--- a/responsive.css
+++ b/responsive.css
@@ -19,6 +19,9 @@
     .img-content{
         width: 100%;
     }
+    .product-container{
+        grid-template-columns:repeat(2,1fr) ;
+    }
 }
 
 
@@ -55,6 +58,12 @@
         width: 100%;
     }
     .img-content{
+        width: 100%;
+    }
+    .product-container{
+        grid-template-columns:repeat(1,1fr) ;
+    }
+    .single-product{
         width: 100%;
     }
     
