--- a/styles.css
+++ b/styles.css
@@ -125,3 +125,48 @@ nav{
 .fa-instagram{
     color: purple;
 }
+
+/* product section */
+
+.product-container{
+    display: grid;
+    grid-template-columns:repeat(4,1fr) ;
+    max-width: 1300px;
+    margin: 20px auto;
+}
+.single-product{
+    width: 300px;
+    background-color: rgba(112, 128, 144, 0.281);
+    border-radius: 10px;
+    padding: 10px 10px;
+    box-shadow: 2px 2px 4px black;
+    margin-top: 20px;
+}
+.single-product img{
+    width: 90%;
+    margin-left: 15px;
+   
+}
+.product-container p{
+    font-size: 15px;
+    margin-top: 20px;
+}
+.product-name-icon{
+    display: flex;
+    justify-content: space-between;
+}
+.fa-cart-shopping{
+    background-color: #e893cf;
+    padding: 10px;
+    border-radius: 50%;
+}
+.fa-credit-card{
+   background-color:green;
+   padding: 10px;
+   border-radius: 50%;
+}
+.fa-eye{
+    background-color: purple;
+    padding: 10px;
+    border-radius: 50%;
+}
