--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ nav{
     background-color: #9376e0;
 }
 .nav-container{
-    max-width: 1300px;
+    max-width: 1200px;
     min-height: 10px;
     display: flex;
     margin: 0 auto;
@@ -24,10 +24,12 @@ nav{
     width: 50%;
     gap: 5px;
     align-items: center;
+
 }
 .logo-items p{
     font-size: 25px;
     color: white;
+    
 }
 .logo-items img{
   width:40px;
@@ -169,4 +171,71 @@ nav{
     background-color: purple;
     padding: 10px;
     border-radius: 50%;
+}
+
+/* Discount styles */
+.discount-container{
+    width: 100%;
+    min-height:70vh;
+    background-color: #9376e0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 50px 0;
+    
+}
+.buy{
+    border: 2px solid white;
+    background: transparent;
+    padding: 10px 20px;
+    font-size: 20px;
+    font-weight: 700;
+}
+.discount-text button, p{
+    margin-top: 20px;
+}
+.disc{
+    width: 80px;
+    height: 80px;
+    background-color: rgb(189, 189, 18);
+    border-radius: 50%;
+    position: absolute;
+    top: 20px;
+    left: 320px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+}
+.discount-img{
+    position: relative;
+}
+.discount-img img{
+    width: 90%;
+}
+
+/* Customer review styles */
+
+.customer-review-container{
+    max-width: 1300px;
+    min-height: 200px;
+    margin: 50px auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+.cutomer-name{
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+}
+.custom-card{
+    width: 300px;
+    background-color: #e893cf;
+    padding: 10px;
+    border-radius: 10px;
+    
+}
+.cutomer-name img{
+    width: 20%;
 }
