--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ nav{
     align-items: center;
 
 }
-.logo-items p{
+.logo-items h2, .foot h2{
     font-size: 25px;
     color: white;
     
@@ -83,6 +83,7 @@ nav{
 .img-content img{
     width: 100%;
     padding: 10px;
+
 }
 .banner-container h1{
     font-size: 50px;
@@ -244,17 +245,18 @@ nav{
 .footer{
     background-color: #9376e0;
     width: 100%;
-    height: 40vh;
+    min-height: 40vh;
     text-align: center;
-    /* align-content: center; */
-    /* padding: 80px; */
-    /* padding-top: 90px; */
+    align-items: center;
+   
 }
-/* .footer > .foot{
-    width: 20%;
+.foot{
     display: flex;
-    border: 2px solid red;
-    padding-left: 80px;
-    margin-left: 500px;
+    align-items: center;
     justify-content: center;
-} */
+    padding-top: 80px;
+
+}
+.foot img{
+    width: 5%;
+}
