--- a/responsive.css
+++ b/responsive.css
@@ -22,12 +22,19 @@
     .product-container{
         grid-template-columns:repeat(2,1fr) ;
     }
+    .disc{
+        left: 200px;
+    }
 }
 
 
 
 /* mobile devices */
 @media screen and (max-width:400px) {
+
+    nav{
+        width: 100%;
+    }
     .nav-container{ 
         flex-direction: column;
         
@@ -73,13 +80,10 @@
         left: 230px;
     }
     .footer{
-        width: 80%;
-    }
-    .footer > .logo-items,{
-        flex-direction: column;
-        width: 50%;
+        width: 100%;
     }
     .footer .foot{
         flex-direction: column;
     }
+
 }
